@@ -198,6 +198,11 @@ body {
   </div>
 </div>
 
+<div class="flexbox" style="height: 60px; -webkit-flex-flow: row wrap; position: relative;">
+  <div data-offset-x="0" data-offset-y="0" style="position: absolute;"></div>
+  <div data-offset-x="0" data-offset-y="0" style="width: 700px;"></div>
+</div>
+
 <!-- Test border/padding/margin on the flexbox itself. -->
 <div data-expected-width="830" style="border: 10px solid; display: inline-block;">
     <div data-expected-width="700" style="padding-left: 10px; padding-right: 20px; border-left: 30px solid; border-right: 40px solid; margin-left: 50px; margin-right:60px;" class="flexbox">
