@@ -1,3 +1,15 @@
+2012-11-08  Wei Fanzhe  <whyer1@gmail.com>
+
+        While absolute positioning is put before the first flexitem, flexitems will move to a new line.
+        https://bugs.webkit.org/show_bug.cgi?id=101294
+
+        Reviewed by Ojan Vafai.
+
+        Add a case to test flexible layout while absolute positioning is put before the first flexitem.
+
+        * css3/flexbox/flex-algorithm-expected.txt:
+        * css3/flexbox/flex-algorithm.html:
+
 2012-11-08  Yael Aharon  <yael.aharon@intel.com>
 
         Unreviewed. Gardening after r133898.
